Blender 2.75-32157d8-win64 solidify crash #45605

Closed
opened 2015-07-29 15:51:18 +02:00 by Rawzombie · 6 comments

System Information
Windows 8.1 Pro x64, GeForce GTX 460

Blender Version
Broken: (example: 2.75-32157d8-win64)
Worked: (2.75a)

Short description of error
Blender crashes in edit mode (face select) when in solidify modifier check "Adjust edit cage to modifier result" and trying to select face

Exact steps for others to reproduce the error
Create plane, add solidify modifier, check "Adjust edit cage to modifier result", choose face select, try select face, crash
In attached file just try to select face and blender crash
http://pasteall.org/blend/37347

**System Information** Windows 8.1 Pro x64, GeForce GTX 460 **Blender Version** Broken: (example: 2.75-32157d8-win64) Worked: (2.75a) **Short description of error** Blender crashes in edit mode (face select) when in solidify modifier check "Adjust edit cage to modifier result" and trying to select face **Exact steps for others to reproduce the error** Create plane, add solidify modifier, check "Adjust edit cage to modifier result", choose face select, try select face, crash In attached file just try to select face and blender crash http://pasteall.org/blend/37347
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Rawzombie

Added subscriber: @Rawzombie

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed, let's check what's happening here.

Confirmed, let's check what's happening here.
Antonis Ryakiotakis self-assigned this 2015-07-29 16:04:05 +02:00

This issue was referenced by becf20e29f

This issue was referenced by becf20e29f606cff01d2e6595572b86e734a01d4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#45605
No description provided.