Fix T45605 crash with editmode selection on solidify modifier.

Looks like derivedmesh draw code always assumed a mesh is available.
Make sure that if we use a bmesh, a flag is used to control that.